--- a/Puclic/index.html
+++ b/Puclic/index.html
@@ -3,12 +3,126 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Blog paysage</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../CSS/style.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <header>
+        <!-- Nav -->
+        <nav id="menu-header">
+            <img src="../Images/logo-landscape.png" alt="logo-landscape" />
+            <ul>
+                <li id="fond-categorie1">
+                    <a href="#">NOTRE RÉVOLUTION</a>
+                </li>
+                <li>
+                    <a href="#">PARTAGE DE FRAIS</a>
+                </li>
+                <li>
+                    <a href="#">TARIFS</a>
+                </li>
+                <li>
+                    <a href="#">BLOG</a>
+                </li>
+                <li>
+                    <a href="#">CONTACT</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- section blocs -->
+    <main>
+        <section>
+            <div>
+                <img src="../Images/sky_ocean.jpg" alt="sky" />
+            </div>
+            <div class="texte1">
+                <p>LE 21 JUILLET 2013</p>
+                <h2>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING ELIT.</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button onclick="https://www.pinterest.fr/zigzagvoyages/paysages-magnifiques/">CATÉGORIE 3</button>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <img src="../Images/forest-jungle.jpg" alt="jungle" />
+            </div>
+            <div class="texte2">
+                <p>15 JUILLET 2013</p>
+                <h2>DOLOR SIT AMET, CONSECTETUR ADIPISCING ELIT.</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button onclick="https://www.pinterest.fr/zigzagvoyages/paysages-magnifiques/">CATÉGORIE 1</button>
+                <button onclick="https://www.pinterest.fr/zigzagvoyages/paysages-magnifiques/">CATÉGORIE 2</button>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <img src="../Images/moutains-north.jpg" alt="moutains" />
+            </div>
+            <div class="texte3">
+                <p>12 JUILLET 2013</p>
+                <h2>SUSPENDISSE POTENTI. QUISQUE TEMPUS MALESUADA JUSTO A TINCIDUNT.</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button onclick="https://www.pinterest.fr/zigzagvoyages/paysages-magnifiques/">CATÉGORIE 1</button>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <img src="../Images/landcape-nature.jpg" alt="nature" />
+            </div>
+            <div class="texte4">
+                <p>15 JUILLET 2013</p>
+                <h2>NULLA PORTTITOR VESTIBULUM NISL. NULLA ALIQUET ELIT NON URNA AUCTOR.</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button onclick="https://www.pinterest.fr/zigzagvoyages/paysages-magnifiques/">CATÉGORIE 1</button>
+                <button onclick="https://www.pinterest.fr/zigzagvoyages/paysages-magnifiques/">CATÉGORIE 2</button>
+            </div>
+        </section>
+    </main>
+
+    <!-- section boutons PRECEDENT / SUIVANT -->
+    <section id="buttons">
+        <button onclick="https://www.pinterest.fr/zigzagvoyages/paysages-magnifiques/">PRECEDENT</button>
+        <button onclick="https://www.pinterest.fr/zigzagvoyages/paysages-magnifiques/">SUIVANT</button>
+    </section>
+
+    <!-- footer -->
+    <footer id="container-footer">
+        <div class="copyright">
+            <p>Webdrive - c 2013 Tous droits réservés</p>
+            <p class="agence">Design agence wype</p>
+        </div>
+        <div class="Mentions-legales">
+            <ul class="pied-page">
+                <li>Mentions légales</li>
+                <li>Conditions générales</li>
+                <li>Presse</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+    </footer>
+       
 </body>
 </html>
