--- a/Puclic/index.html
+++ b/Puclic/index.html
@@ -7,8 +7,53 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../CSS/style.css'>
     <script src='main.js'></script>
+
+<!-- schema.org -->
+<script type="application/ld+json">
+    { "@context" : "http://schema.org",
+      "@type" : "Blog",
+      "legalName" : "Landscape",
+      "url" : "http://landscape.com/",
+      "contactPoint" : [{
+        "@type" : "ContactPoint",
+        "telephone" : "+33-7-xx-xx-xx",
+        "contactType" : "Order books"
+      }]
+      "logo" : "../Images/logo-landscape.png",
+      "sameAs" : [ "https://fr.wikipedia.org/wiki/Landscape"]
+    }
+    </script>
+  <!-- end schema.org -->
+
+  <!-- Google Analytics-->
+  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-420XXXXXX', 'landscape.com');
+    ga('send', 'pageview');
+  </script>
+<!-- end Google Analytics -->
+
+<!-- Tag manager -->
+<script>
+    ( fonction ( w, d, s, l, i ) { w [ l ] = w [ l ] || []; w [ l ] . push ({ 'gtm.start' :      
+    nouvelle date (). getTime (), événement : 'gtm.js' }); var f = d . getElementsByTagName ( s ) [ 0 ],     
+    j = d . createElement ( s ), dl = l ! = 'DataLayer' ? '& l =' + l : '' ; j . async = vrai ; j . src =      
+    «https://www.googletagmanager.com/gtm.js?id=» + i + dl ; f . parentNode . insertBefore ( j , f );
+    }) (window, document, 'script', 'dataLayer', 'GTM-XXXX'); 
+  </script> 
+  <!-- end Tag Manager -->
+
 </head>
+
 <body>
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src = "https://www.googletagmanager.com/ns.html?id= GTM-XXXX "
+  height = "0" width = "0" style = " display: none ; visibility: hidden" > </iframe> </noscript>          
+  <!-- End Google Tag Manager (noscript) -->
+
     <header>
         <!-- Nav -->
         <nav id="menu-header">
@@ -103,25 +148,28 @@
     </main>
 
     <!-- section boutons PRECEDENT / SUIVANT -->
-    <section id="buttons">
-        <button onclick="https://www.pinterest.fr/zigzagvoyages/paysages-magnifiques/">PRECEDENT</button>
-        <button onclick="https://www.pinterest.fr/zigzagvoyages/paysages-magnifiques/">SUIVANT</button>
+    <section>
+        <button onclick class="buttons1"="https://www.pinterest.fr/zigzagvoyages/paysages-magnifiques/">PRECEDENT</button>
+        <button onclick class="buttons2"="https://www.pinterest.fr/zigzagvoyages/paysages-magnifiques/">SUIVANT</button>
     </section>
 
     <!-- footer -->
     <footer id="container-footer">
         <div class="copyright">
-            <p>Webdrive - c 2013 Tous droits réservés</p>
+            <p class="color-webdrive">Webdrive - c 2013 Tous droits réservés</p>
             <p class="agence">Design agence wype</p>
         </div>
-        <div class="Mentions-legales">
-            <ul class="pied-page">
-                <li>Mentions légales</li>
-                <li>Conditions générales</li>
-                <li>Presse</li>
-                <li>Contact</li>
-            </ul>
-        </div>
+
+        <section>
+            <div>
+                <ul class="pied-page">
+                    <li>Mentions légales</li>
+                    <li>Conditions générales</li>
+                    <li>Presse</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </section>
     </footer>
        
 </body>
